--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Slabo+27px');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size:1em;
 }
 
@@ -12,6 +13,7 @@ h1, h2, h3{
 h2{
     font-size:2.4em;
     border:1px dotted salmon;
+    margin: .25em 0 0 0;
 }
 
 p{
@@ -47,4 +49,5 @@ article{
     flex-direction: column;
     border:1px dotted aqua;
     align-items: center;
+    padding-bottom: 3em;
 }
