--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Slabo+27px');
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=Cabin');
+
 
 body{
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Cabin', sans-serif;
     font-size:1em;
 }
 
@@ -14,10 +15,12 @@ h2{
     font-size:2.4em;
     border:1px dotted salmon;
     margin: .25em 0 0 0;
+    letter-spacing: .05em;
 }
 
 p{
     border:1px dotted green;
+    line-height: 1.5em;
 }
 
 /*make images flexible*/
