--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,13 @@ h1, h2, h3{
     font-family: 'Slabo 27px', serif;
 }
 
+h1{
+    font-size:3.6em;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    line-height: 1em;
+}
+
 h2{
     font-size:2.4em;
     border:1px dotted salmon;
@@ -46,11 +53,20 @@ main{
 }
 
 
-
 article{
     display:flex;
     flex-direction: column;
     border:1px dotted aqua;
     align-items: center;
-    padding-bottom: 3em;
+    padding: 1em 0 3em 0;
+}
+
+#hero{
+    border:2px solid red;
+    width:100%;
+    height:24vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
