--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,9 @@ header{
 main{
     display:flex;
     flex-direction: column;
-    border:2px solid orangered;
+    /* border:2px solid orangered; */
+    max-width:994px;
+    margin: 0 auto;
 }
 
 
