--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 body{
     font-family: 'Cabin', sans-serif;
     font-size:1em;
+    padding:.75em;
 }
 
 h1, h2, h3{
@@ -58,7 +59,7 @@ main{
 article{
     display:flex;
     flex-direction: column;
-    border:1px dotted aqua;
+    /* border:1px dotted aqua; */
     align-items: center;
     padding: 1em 0 3em 0;
 }
@@ -80,6 +81,21 @@ nav ul{
     display:flex;
     flex-direction: row;
     list-style-type: none;
+    /* border:1px dotted red; */
+    margin-top:1em !important;
+    margin-bottom:2em !important;
+
+    /*override local styles in browser*/
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+
+}
+
+nav ul {
+   
 }
 
 
@@ -89,20 +105,49 @@ nav li{
     border-radius: .25em;
 }
 
+nav li:link, nav li:visited{
+     background-color: orange;
+     color:black;
+    }
+
+
+nav li:hover, nav li:active{
+    background-color: #2db2c4;
+    color:white;
+}
+
+nav li a:hover, nav li a:active{
+    color:white;
+}
+
 /*put some margins around the nav items*/
 nav li + li{   /*select everything AFTER the first li*/
     margin-left: .5em;
 }
 
-nav li:nth-child(2){
+/* nav li:nth-child(2){
     background-color:orangered;
-}
+} */
 
-nav li:nth-child(2) a{
+/* nav li:nth-child(2) a{
     color:white;
-}
+} */
 
 nav a{
     text-decoration: none;
     color:black;
 }
+
+
+
+
+
+
+
+
+/*MEDIA QUERIES*/
+
+@media (min-width: 1024px) { 
+
+
+ }
