--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ h1, h2, h3{
 }
 
 h1{
-    font-size:3.6em;
+    font-size:2.8em;
     text-transform: uppercase;
     letter-spacing: .05em;
     line-height: 1em;
@@ -151,6 +151,11 @@ nav a{
         max-width:994px;
         margin: 0 auto;
         margin-bottom:1.76em;
+    }
+
+    h1{
+        font-size:3.6em;
+        
     }
 
  }
