added wrap to nav flex items

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ nav ul{
     display:flex;
     flex-direction: row;
     list-style-type: none;
+    flex-wrap:wrap;
     margin-top:1em !important;
     margin-bottom:2em !important;
 
