--- a/css/styles.css
+++ b/css/styles.css
@@ -67,15 +67,26 @@ article{
 
 #hero{
     border-radius:.5em;
-    background-image: url("../images/pattern.png");
     width:100%;
     height:24vh;
     display:flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    background-color: #026873;
+    background-image: linear-gradient(90deg, rgba(255,255,255,.07) 50%, transparent 50%),
+    linear-gradient(90deg, rgba(255,255,255,.13) 50%, transparent 50%),
+    linear-gradient(90deg, transparent 50%, rgba(255,255,255,.17) 50%),
+    linear-gradient(90deg, transparent 50%, rgba(255,255,255,.19) 50%);
+    background-size: 13px, 29px, 37px, 53px;
     
 }
+
+#hero h1{
+    color:white;
+}
+
 
 nav ul{
     display:flex;
