--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ main{
     flex-direction: column;
 }
 
-article{
+.article{
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -153,7 +153,7 @@ nav a{
         
     }
 
-    article{
+    .article{
         padding:0 1.25em;
     }
 
